service.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: bankingholidays-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: bankingholidays-service
    spec:
      hostname: bankingholidays-service
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: kyc-gateway
          image: docker.pkg.github.com/nordlb/banking-holidays-service/banking-holidays-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 350Mi
            limits:
              cpu: 400m
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: bankingholidays-service
  name: bankingholidays-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    name: bankingholidays-service
